# gstreamer_gtkvideooverlay

./: .clang-format  CMakeLists.txt  README.md  sandbox.cpp
